Completd With Design And Validation

--- a/LibraryManagement/Views/Home/Index.cshtml
+++ b/LibraryManagement/Views/Home/Index.cshtml
@@ -12,21 +12,36 @@
     }
 }
 
-
-<div class="container-fluid ">
+@model LibraryManagement.Entities.ViewModel.BookModel
+<div class="container-fluid my-5">
     <div class="d-flex justify-content-between" >
         <form id="filterForm" data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#SearchResult"
           asp-action="_SearchResultBook" asp-controller="Home" novalidate="novalidate">
             @Html.AntiForgeryToken()
+
+            <div class="row col-xl-12">
+                <div class="col-sm-6">
+                    <input id="getSearchInput" asp-for="SearchInput" class="form-control  w-100" type="text"
+                           placeholder='Search Patients'>
+                </div>
+                <div class="col-sm-6">
+                    <div class="">
+
+                        <select class="form-select  w-100 BorrowerCmbo" asp-for="Borrowerid" data-allow-clear="true" tabindex="-1" id="BorrowerCmbo" asp-items="@(new SelectList(ViewBag.ComboBoxBorrower, "BrrowerId", "BrrowerName"))" data-control="select" data-placeholder="Borrower">
+                            <option id="defaultregion" value="">All Borrower</option>
+                        </select>
+                    </div>
+                </div>
+            </div>
             <input type="submit" class="d-none" id="submit" value="save" />
         </form>
 
         <div class="d-flex justify-content-end" >
-            <a class="storeToLocalStorage btn btn-success text-white js-stkModal-btn mx-2"
+            <a class="storeToLocalStorage btn btn-success btn-theme text-dark js-stkModal-btn mx-2 p-2 fw-bold"
                data-date=""
                data-form-id="formEdit_UMS"
                data-url='@Url.Action("_AddBook", "Home")'
-               data-modal-size="lg">Add New Book  </a>
+               data-modal-size="lg">Add  Book  </a>
         </div>
 
     </div>
