--- a/LibraryManagement/Views/Home/_BookList.cshtml
+++ b/LibraryManagement/Views/Home/_BookList.cshtml
@@ -5,7 +5,7 @@
 <div class="table-responsive">
     <table class="table table-responsive mt-3 p-3 dataTable" id="table">
 
-        <thead class=" text-start tablehead">
+        <thead class=" text-start text-secondary tablehead">
             <tr>
                 <th class="dashborad-table " scope="col">BookID</th>
                 <th class="dashborad-table " scope="col">Book Name</th>
@@ -19,10 +19,14 @@
             </tr>
         </thead>
         <tbody class="table-group-divider mx-5">
+            @{
+                int i = 0;
+            }
            @foreach (var item in Model.BookList)
             {
+
                 <tr>
-                    <td scope="col">@item.Bookid</td>
+                    <td scope="col">@(i = i+1) </td>
                     <td scope="col">@item.Bookname Name</td>
                     <td scope="col">@item.Author</td>
                     <td scope="col">@item.BorrowerName</td>
@@ -32,12 +36,12 @@
                     <td class=" d-flex" scope="col">
                         <a data-form-id="formEdit_UMS"
                            data-url='@Url.Action("_AddBook", "Home")?BookId=@item.Bookid'
-                           class="js-stkModal-btn text-dark btn btn-outline-info btn-sm ">
+                           class="js-stkModal-btn text-white btn-theme btn btn-outline-light btn-sm ">
                             Edit
                         </a>
                         <form class="deleteform" asp-action="BookDelete" asp-controller="Home">
                             <input type="hidden" name="BookId" value="@item.Bookid" />
-                            <div class="btn btn-outline-info btn-sm document-button mx-1 delete">
+                            <div class="btn btn-dark  btn-sm document-button mx-1 delete">
                                 Delete
                             </div>
                         </form>
@@ -48,16 +52,31 @@
         </tbody>
     </table>
 
-    <div aria-label="Page navigation example">
-        <ul class="pagination pagination-container d-flex justify-content-end">
+    <div aria-label="Page navigation example" class="d-flex justify-content-between">
+        <div>
+            <form id="filterFormlistp" data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#SearchResult"
+                  asp-action="_SearchResultBook" asp-controller="Home" novalidate="novalidate">
+
+                <input type="hidden" asp-for="CurrentPage"  />
+                <input type="hidden" asp-for="SearchInput" />
+                <input type="hidden" asp-for="Borrowerid" />
+                <input type="submit" class="d-none" id="filterFormlistpbtn" />
+                <span>Item Per Page :</span>
+                <select class="form-select Paging" asp-for="PageSize" onchange="page()" type="submit" data-allow-clear="true" tabindex="-1" id="Paging" data-control="select" data-placeholder="Borrower">
+                    <option value="10" >10</option>
+                    <option value="15">15</option>
+                    <option value="5">5</option>
+                </select>
+            </form>
+        </div>
+
+        <ul class="pagination pagination-container text-secondary d-flex justify-content-end">
             <form id="filterFormlist" data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#SearchResult"
                   asp-action="_SearchResultBook" asp-controller="Home" novalidate="novalidate">
 
                 <input type="hidden" asp-for="CurrentPage" value="@(Model.CurrentPage-1)" />
-               
+                <input type="hidden" asp-for="PageSize" />
                 <input type="hidden" asp-for="SearchInput" />
-                <input type="hidden" asp-for="IsAscending" />
-                <input type="hidden" asp-for="SortedColumn" />
 
             <li class="page-item mx-1 rounded"><button type="submit" class="@(Model.CurrentPage > 1 ? "" : "disabled") dt-paging-button previous page-link" @(Model.CurrentPage > 1 ? "" : "disabled")>‹</button></li>
 
@@ -69,12 +88,10 @@
                 {
                     <form id="filterFormlist" data-ajax="true" data-ajax-method="post" data-ajax-mode="replace" data-ajax-update="#SearchResult"
                           asp-action="_SearchResultBook" asp-controller="Home" novalidate="novalidate">
-                       
+                        <input type="hidden" asp-for="PageSize" />
                         <input type="hidden" asp-for="SearchInput" />
                         <input type="hidden" asp-for="CurrentPage" value="@start" />
-                        <input type="hidden" asp-for="IsAscending" />
-                        <input type="hidden" asp-for="SortedColumn" />
-                    <li class="page-item mx-1 rounded"><button type="submit" class="@(start == @Model.CurrentPage ? "active" : "") rounded page-link" onclick="pagination(@start)">@start</button></li>
+                    <li class="page-item mx-1 rounded text-secondary"><button type="submit" class="@(start == @Model.CurrentPage ? "active" : "") rounded page-link" onclick="pagination(@start)">@start</button></li>
                     </form>
 
                 }
@@ -84,7 +101,7 @@
                   asp-action="_SearchResultBook" asp-controller="Home" novalidate="novalidate">
 
                 <input type="hidden" asp-for="CurrentPage" value="@(Model.CurrentPage+1)" />
-               
+                <input type="hidden" asp-for="PageSize" />
                 <input type="hidden" asp-for="SearchInput" />
                 <input type="hidden" asp-for="IsAscending" />
                 <input type="hidden" asp-for="SortedColumn" />
@@ -100,58 +117,13 @@
 
     <input type="hidden" asp-for="CurrentPage" />
     <input type="hidden" asp-for="SearchInput" />
+    <input type="hidden" asp-for="PageSize" />
     <input type="hidden" id="isAsc" asp-for="IsAscending" />
     <input type="hidden" id="sortedcol" asp-for="SortedColumn" />
     <input type="submit" id="dashbordsubmit" class="d-none" />
 </form>
 <script>
-    //setInitialArrowState();
-    //function setInitialArrowState() {
-    //    const headers = $('.dashborad-table.Name, .dashborad-table.Requestor, .dashborad-table.Requested, .dashborad-table.Physician ');
-
-    //    headers.each(function () {
-    //        if (!$(this).find('.bi-arrow-up').length) {
-    //            $(this).append('<i class="bi bi-arrow-up btn"></i>');
-    //        }
-    //        $(this).click(function () {
-    //            const orderValues = $(this).attr('data-order').split(' ')[0];
-    //            SetColumValue(orderValues);
-    //        });
-    //    });
-
-    //    var modeldata = @Html.Raw(Json.Serialize(Model));
-    //    var headerss = $('.dashborad-table');
-    //    headerss.each(function () {
-    //        var orderValues = $(this).attr('data-order').split(' ')[0];
-    //        if (modeldata.sortedColumn === orderValues) {
-    //            var icon = $(this).find('i.bi.bi-arrow-up, i.bi.bi-arrow-down');
-    //            console.log(icon.find('i.bi.bi-arrow-up, i.bi.bi-arrow-down'));
-    //            if (!modeldata.isAscending) {
-    //                icon.removeClass('bi-arrow-up').addClass('bi-arrow-down');
-    //            } else {
-    //                icon.removeClass('bi-arrow-down').addClass('bi-arrow-up');
-    //            }
-    //        }
-    //    });
-    //}
-    //function SetColumValue(e) {
-    //    var modeldata = @Html.Raw(Json.Serialize(Model));
-    //    if (modeldata.sortedColumn === e) {
-    //        if (modeldata.isAscending == true) {
-    //            document.getElementById('isAsc').value = false;
-    //        }
-    //        else {
-    //            document.getElementById('isAsc').value = true;
-    //        }
-    //        console.log(document.getElementById('isAsc').value);
-    //    }
-    //    else {
-    //        document.getElementById('sortedcol').value = e;
-    //        document.getElementById('isAsc').value = true;
-    //    }
-    //    $("#dashbordsubmit").click();
-    //}
-
+   
     var deleteButtons = document.querySelectorAll('.delete');
 
     deleteButtons.forEach(function (button) {
