--- a/LibraryManagement/Views/Shared/_Layout.cshtml
+++ b/LibraryManagement/Views/Shared/_Layout.cshtml
@@ -8,11 +8,11 @@
     <link rel="stylesheet" href="~/css/style.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LibraryManagement.styles.css" asp-append-version="true" />
 </head>
-<body>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
+<body class="rounded" >
+    <header class="mx-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light theme-nav border-bottom box-shadow mb-3 ">
             <div class="container-fluid">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"> Library Management Sysytem</a>
+                <a class="navbar-brand text-white fw-bolder" asp-area="" asp-controller="Home" asp-action="Index"> Library Management Sysytem</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -21,17 +21,13 @@
             </div>
         </nav>
     </header>
-    <div class="container">
-        <main role="main" class="pb-3">
+    <div class="container-fluid">
+        <main role="main" class="pb-3 container-fluid">
             @RenderBody()
         </main>
     </div>
     <div id="modal-placeholder"></div>
-    <footer class="border-top footer text-muted">
-        <div class="container">
-            &copy; 2024 - LibraryManagement - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-        </div>
-    </footer>
+
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="https://kit.fontawesome.com/1d989daaf7.js" crossorigin="anonymous"></script>
