--- a/LibraryManagement/wwwroot/css/style.css
+++ b/LibraryManagement/wwwroot/css/style.css
@@ -1,15 +1,21 @@
 :root, [data-theme="light"] {
-    --primary-color: #01BCE9;
+    --primary-color: #326c9b;
     --nav-active: #34b9bb;
     --body-color: #FAFAFA;
     --white-color: #FFFFFF;
-    --secondary-color: #0D1556;
+    --secondary-color: #b6bad8;
+}
+body {
+    font-family: sans-serif;
 }
 
 .btn-theme{
-    color:blueviolet;
+    color:var(--white-color);
+    background-color:var(--primary-color) !important;
 }
-
+.bg-theme {
+    background-color: var(--primary-color) !important;
+}
 /* form */
 .form-s-control {
     position: relative;
@@ -22,7 +28,7 @@
     top: 50%;
     transform: translateY(-50%);
     background-color: white;
-    color: var(--secondary-color);
+    color: var(--primary-color);
     padding: 0 0.3rem;
     margin: 0 0.5rem;
     transition: .1s ease-out;
@@ -54,3 +60,41 @@
         top: 0;
         transform: translateY(-50%) scale(.9);
     }
+.autocomplete {
+    position: relative;
+    display: inline-block;
+}
+
+
+.autocomplete-items {
+    position: absolute;
+    border: 1px solid #d4d4d4;
+    border-bottom: none;
+    border-top: none;
+    z-index: 99;
+    /*position the autocomplete items to be the same width as the container:*/
+    top: 100%;
+    left: 0;
+    right: 0;
+}
+
+    .autocomplete-items div {
+        padding: 10px;
+        cursor: pointer;
+        background-color: #fff;
+        border-bottom: 1px solid #d4d4d4;
+    }
+
+        /*when hovering an item:*/
+        .autocomplete-items div:hover {
+            background-color: #e9e9e9;
+        }
+
+/*when navigating through the items using the arrow keys:*/
+.autocomplete-active {
+    background-color: DodgerBlue !important;
+    color: #ffffff;
+}
+.theme-nav{
+    background-color:var(--primary-color);
+}
