--- a/LibraryManagement/Views/Home/_BookList.cshtml
+++ b/LibraryManagement/Views/Home/_BookList.cshtml
@@ -27,7 +27,7 @@
 
                 <tr>
                     <td scope="col">@(i = i+1) </td>
-                    <td scope="col">@item.Bookname Name</td>
+                    <td scope="col">@item.Bookname</td>
                     <td scope="col">@item.Author</td>
                     <td scope="col">@item.BorrowerName</td>
                     <td scope="col">@item.Dateofissue</td>
